--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ theme: pure
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/tinsdyg/tinsdyg.github.io
+  repo: git@github.com:tinsdyg/tinsdyg.github.io.git
   branch: main
