--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^1.0.0",
+    "hexo-theme-icarus": "^5.2.1",
     "hexo-wordcount": "^6.0.1"
   }
 }
